# tsm

./: .actrc  .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  install.sh  main.py  pyoxidizer.bzl  pyoxidizer.bzl.backup  pyproject.toml  requirements.txt  tsm-linux.spec  tsm-macos.spec  tsm.exe.spec  tsm.spec
.devcontainer/: devcontainer.json
.devcontainer/docker/devcontainer/: Dockerfile  compose-devcontainer.yml
.devcontainer/docker/traefik/: docker-compose.yml
.devcontainer/scripts/: postCreate.sh
.github/workflows/: deploy-docs.yml  package.yml  release.yml  test.yml
docs/: GITHUB_ACTIONS.md  RELEASES.md  book.toml
docs/src/: SUMMARY.md  certificate-management.md  cli-commands.md  installation.md  introduction.md  quickstart.md
docs/src/certificates/: bundles.md  value-inheritance.md
docs/src/cli/: build-dockerfiles.md  clean.md  copy-certs.md  discover.md  generate-certs.md  generate-hosts.md  generate-usersfile.md  generate.md  init-config.md  monitor.md  scale.md  status.md  up.md  version.md
docs/src/features/: configuration-generation.md
docs/src/installation/: homebrew.md  install-script.md  pip.md
scripts/: build_all.sh  build_binary.sh  create_release.sh  install.sh  test_workflow.sh
spec/: tsm-linux.spec  tsm-macos.spec  tsm.exe.spec  tsm.spec
src/tsm/: certs.py  cli.py  config.py  console_logger.py  discovery.py  docker_client.py  generator.py  installer.py  service_manager.py  usersfile.py  utils.py  watcher.py
templates/: alertmanager.yml  cert-config.yml  docker-compose.yaml  docker-compose.yml  middleware.yml  prometheus.yml  scaling-rules.yml  traefik.yml
templates/dockerfiles/static/: Dockerfile
templates/dockerfiles/traefik/: Dockerfile  traefik-entrypoint.sh
templates/monitoring/grafana/: grafana.ini
templates/monitoring/prometheus/: prometheus.yml
templates/traefik/: traefik.yml
tests/: conftest.py  docker-compose.sample.yml  test_cli.py  test_config.py  test_discovery.py  test_utils.py
tsm/: certs.py  cli.py  config.py  discovery.py  docker_client.py  generator.py  monitoring.py  scaling.py  templates.py
